<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="default_cpu_backend"
        android:title="@string/pref_default_backend_title"
        android:summary="@string/pref_default_backend_summary"
        android:entries="@array/cpu_backend_entries"
        android:entryValues="@array/cpu_backend_values"
        android:defaultValue="stub" />

    <SeekBarPreference
        android:key="verbosity"
        android:title="@string/pref_verbosity_title"
        android:summary="@string/pref_verbosity_summary"
        android:max="3"
        app:min="0"
        app:showSeekBarValue="true"
        android:defaultValue="1" />

    <SwitchPreferenceCompat
        android:key="show_fps"
        android:title="@string/pref_show_fps_title"
        android:summary="@string/pref_show_fps_summary"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="fullscreen"
        android:title="@string/pref_fullscreen_title"
        android:summary="@string/pref_fullscreen_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="fullscreen_mode"
        android:title="@string/pref_fullscreen_mode_title"
        android:summary="@string/pref_fullscreen_mode_summary"
        android:entries="@array/fullscreen_mode_entries"
        android:entryValues="@array/fullscreen_mode_values"
        android:defaultValue="with_controls" />

    <ListPreference
        android:key="orientation"
        android:title="@string/pref_orientation_title"
        android:summary="@string/pref_orientation_summary"
        android:entries="@array/orientation_entries"
        android:entryValues="@array/orientation_values"
        android:defaultValue="auto" />

    <Preference
        android:key="library_root"
        android:title="@string/pref_library_root_title"
        android:selectable="false" />

</PreferenceScreen>
